# aport-integrations

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  env.example
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  hacktoberfest-integration.yml
.github/workflows/: ci.yml  hacktoberfest.yml
docs/: INTEGRATION_GUIDE.md
examples/agent-frameworks/langgraph/: .env.example  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt  run_tests.py  showcase.py
examples/agent-frameworks/langgraph/src/: client.py  (+3 more)
examples/developer-tools/cli/: README.md
examples/hello-world/go/: README.md  env.example  go.mod  main.go
scripts/: create-hacktoberfest-issues-2025-10-02-0903.sh  create-hacktoberfest-issues-2025-10-02.sh  create-hacktoberfest-issues-complete.sh
sdk/: README.md
templates/javascript-middleware/: README.md  package.json
templates/javascript-middleware/examples/: server.js
templates/javascript-middleware/src/: index.js
templates/javascript-middleware/tests/: integration.test.js
templates/nextjs-middleware/: .eslintrc.json  DEPLOY.md  DEPLOYMENT_SUMMARY.md  README.md  middleware.ts  next.config.js  package.json  vercel.json
templates/nextjs-middleware/app/: page.tsx
templates/nextjs-middleware/types/: aport.d.ts
templates/python-middleware/: README.md  pyproject.toml
templates/python-middleware/examples/: server.py
templates/python-middleware/src/aport_middleware/: __init__.py  exceptions.py  middleware.py
templates/python-middleware/tests/: test_middleware.py
tools/cli/: README.md  env.example  jest.config.js  package-lock.json  package.json  test-data-export-policy.js  test-messaging-policy.js
tools/cli/examples/: advanced-usage.js  basic-usage.js
tools/cli/src/: client.js  index.js
tools/cli/tests/: client.test.js
(+11 files in other folders)
